--- a/less/style.less
+++ b/less/style.less
@@ -128,6 +128,7 @@ Version:        0.2.0
       &.top-tag {
         font-weight: 300;
         font-size: 16px;
+        color: @black;
       }
       a {
         &:hover {
